# be_my_wiki

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
skills/pdf-fig-extractor/: SKILL.md  extract_figures.py
src/be_my_wiki/: cli.py  config.py
src/be_my_wiki/embedding/: base.py  bge_m3.py
src/be_my_wiki/indexer/: pipeline.py  watcher.py
src/be_my_wiki/mcp_server/: server.py
src/be_my_wiki/parsing/: chunker.py
src/be_my_wiki/store/: base.py  chroma.py
tests/: _fakes.py  conftest.py  test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_indexer.py  test_mcp_server.py  test_store.py  test_watcher.py
