[project]
name = "be-my-wiki"
version = "0.1.0"
description = "MCP server that indexes Obsidian-style markdown vaults for context-aware semantic search (bge-m3 + ChromaDB)."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Seok-jeong Hwang"},
]
keywords = [
    "mcp",
    "obsidian",
    "semantic-search",
    "rag",
    "embedding",
    "chromadb",
    "bge-m3",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "watchdog>=4.0",
    "markdown-it-py>=3.0",
    "python-frontmatter>=1.1",
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/aigo13/be_my_wiki"
Repository = "https://github.com/aigo13/be_my_wiki"
Issues = "https://github.com/aigo13/be_my_wiki/issues"

[project.scripts]
my-wiki = "be_my_wiki.cli:app"
my-wiki-mcp = "be_my_wiki.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/be_my_wiki"]
